<?xml version="1.0"?>
<package format="3">
  <name>ros_simple</name>
  <version>0.0.1</version>
  <description>A ROS/ROS2 Library Interface</description>
  <maintainer email="lorenzo.gentilini@toyota-industries.eu">Lorenzo Gentilini</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export> 
</package>
